tests/macros/rawlist/validate_async.rs
fn main() {
    let q = inquisition::questions![rawlist { async validate: todo!() }];
}
